--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ torchvision==0.7.0
 ipython==7.17.0
 ipykernel==5.3.4
 numpy==1.19.0
-pillow~=7.2
+pillow>=8.1.2
 python-multipart==0.0.5
 starlette==0.13.6
 uvicorn==0.11.7
